# timeline

./: AGENTS.md  README.md  config.example.toml  pyproject.toml  pytest.ini  timeline.code-workspace
.github/: copilot-commit-message-instructions.md
.github/skills/prinsiples/: SKILL.md
.github/skills/python-standards/: SKILL.md
src/timeline/: __init__.py  cli.py  config.py  models.py  pipeline.py  store.py  summarizer.py  transformer.py
src/timeline/collectors/: base.py  browser.py  calendar.py  git.py  shell.py  windows_events.py
src/timeline/config/: __init__.py  loader.py  models.py  serializer.py  validation.py
src/timeline/exporters/: base.py  stdout.py
src/timeline/transformer/: __init__.py  categorizer.py  cleaner.py  dispatcher.py  parser.py  projector.py
tests/: conftest.py  test_backfill.py  test_browser_collector.py  test_calendar_collector.py  test_calendar_parser.py  test_cli_filtering.py  test_config.py  test_git_collector.py  test_models.py  test_optimus.py  test_pipeline.py  test_shell_collector.py  test_stdout_exporter.py  test_store.py  test_summarizer.py  test_transformer.py  test_windows_events.py
